src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Name</label>
        <referenceTo>Organisation__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remedial_Action_Cost__c</fullName>
        <label>Remedial Action Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remedial_Action_Type__c</fullName>
        <label>Remedial Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>Extend closure date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC additional classification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC rerun online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC sponsored job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>